<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <!-- Login screen with Two buttons -->

        <TextView
            android:id="@+id/textDatabase_ip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:text="@string/database_server_ip"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editDatabase_ip"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/_192_168_0_1_3306_arma3life"
            android:singleLine="true" />

        <TextView
            android:id="@+id/textUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dip"
            android:text="@string/database_user"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/root"
            android:singleLine="true" />

        <TextView
            android:id="@+id/textPass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dip"
            android:text="@string/database_user_password"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editPass"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/_"
            android:inputType="textPassword"
            android:singleLine="true" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dip"
            android:text="@string/_view_players_" />

        <TextView
            android:id="@+id/text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dip"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/img_donate"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/paypal_donation_button"
            android:src="@drawable/btn_donate" 
            android:layout_marginTop="30dip"/>

    </LinearLayout>
</ScrollView>